# nwnx2-arelith

./: .gitignore  CMakeLists.txt
api/: CCombatInformation.h  CCombatInformationNode.h  CExoBase.h  CLoopingVisualEffect.h  CNWSArea.h  CNWSAreaOfEffectObject.h  CNWSCombatAttackData.h  CNWSCreature.cpp  CNWSCreature.h  CNWSCreatureStats.h  CNWSModule.h  CNWSObject.h  CResIFO.h  CServerExoApp.cpp  CServerExoApp.h  CServerExoAppInternal.h  all.h  nwnstructs.h  static_asserts.h
core/: Profile.h  Profile_BoxedType.h  Profile_Event.h
lib-arelith/: CallingConvention.hpp  FunctionHook.cpp  FunctionHook.hpp  Functions.hpp  FunctionsLinux.hpp  Hooking.hpp
override/: CMakeLists.txt
plugins/arelith-admin/: CMakeLists.txt  NWNXArelithAdmin.cpp  NWNXArelithAdmin.hpp  nwnx_are_admin.nss  plugin-arelith_admin.cpp
plugins/arelith-debug/: CMakeLists.txt  NWNXArelithDebug.cpp  NWNXArelithDebug.hpp  plugin-arelith_debug.cpp
plugins/arelith-errors/: CMakeLists.txt  NWNXArelithErrors.cpp  NWNXArelithErrors.hpp  plugin-arelith_errors.cpp
plugins/arelith-events/: CMakeLists.txt  NWNXArelithEvents.cpp  NWNXArelithEvents.hpp  nwnx_are_events.nss  plugin-arelith_events.cpp
plugins/arelith-monitoring/: CMakeLists.txt  NWNXArelithMonitoring.cpp  NWNXArelithMonitoring.hpp  ServerConfig.cpp  ServerConfig.hpp  plugin-arelith_monitoring.cpp  schema.sql
plugins/arelith-monitoring/metrics/mainloopticks/: MainLoopTicks.cpp  MainLoopTicks.hpp
plugins/physfs/: CMakeLists.txt  NWNXPhysfs.cpp  NWNXPhysfs.h  README.md  nwnx2.ini  plugin-physfs.cpp
preload-open/: defs.h  preload-open.c
(+111 files in other folders)
